[package]
name = "sqb-hash-dump"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
sqb-rs = { git = "https://github.com/BenHall-7/sqb-rs" }
